--- a/outings.html
+++ b/outings.html
@@ -70,7 +70,7 @@
 								    </ul>
 								  </div>
 									<div class="col-4 col-12-medium">
-										<img width="110%" src="images/aravicimes-me.jpg">
+										<img width="110%" src="images/aravicimes-me">
 									</div>
                 </div>
 							</div>
@@ -100,7 +100,7 @@
 										</ul>
 									</div>
 									<div class="col-4 col-12-medium">
-										<img width="110%" src="images/himachal.jpg">
+										<img width="110%" src="images/himachal.JPG">
 									</div>
 		            </div>
 							</div>
@@ -136,7 +136,7 @@
                           <img id="fig3" src="images/svadla.jpg">
 											    <img id="fig4" src="images/arg1.jpg">
 											    <img id="fig5" src="images/bel1.jpg">
-											    <img id="fig6" src="images/bis1.jpg">
+											    <img id="fig6" src="images/bis1.JPG">
 											    <img id="fig7" src="images/downhill1.jpg">
 											    <img id="fig8" src="images/ice.jpg">
 											    <img id="fig9" src="images/javor-ski-ii.jpg">
@@ -145,7 +145,7 @@
 											    <img id="fig12" src="images/ledik2.jpg">
 													<img id="fig13" src="images/midi.jpg">
 													<img id="fig14" src="images/perce2.jpg">
-													<img id="fig15" src="images/pisek.jpg">
+													<img id="fig15" src="images/pisek.JPG">
 													<img id="fig16" src="images/trig.jpg">
 												</div>
                       </div>
