--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pp2.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/pp2.JPG" alt="" /></div><div class="content">
 								<h2>Pointe Perceé</h2>
 								<p>Tůra doporučená především pro adepty na výstup na Matterhorn. P.P. je Amou Dablam části Alp zvané Aravis, a také tak z mnoha úhlů vypadá.
 									Na vrchol vede normální cesta, s technickou náročností do I UIAA, na které není potřeba jištění lanem. Nicméně pevný krok, obratnost v technickém terénu a odolnost vůči expozici jsou podmínkou nutnou.
@@ -92,7 +92,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/buet.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/buet.JPG" alt="" /></div><div class="content">
 								<h2>Mont Buet</h2>
 								<p>Ideální aklimatizační hora před výstupem na Mt. Blanc. Na fotce jsou zachyceni oba velikáni, jak se tyčí z mraků bok po boku.
 									 Na samotný třítisícový vrchol vede mnoho, vetšinou jednodušších, cest, které je vhodné zdolat ve dvou dnech.
@@ -110,7 +110,7 @@
 							</div>
 						</section>
 					  <section class="spotlight">
-						  <div class="image"><img src="images/gralet.jpg" alt="" /></div><div class="content">
+						  <div class="image"><img src="images/gralet.JPG" alt="" /></div><div class="content">
 							  <h2>Lavinové kurzy, Snežnice a Tůry na Juře</h2>
 							  <p>Zejména opuštěná oblest chaty Chalet Gralet umí turistovi ukázat, jak divoké a drsné střední pohoří může být.
 									 Skalní srázy, dlouhé pláně, lavinové dráhy, les ustupující nadmořské výšce. Při jednodenních tůrách v zimně se zaměřuji buď
@@ -224,7 +224,7 @@
 						     	</header>
 								</div>
 								<div class="col-6 col-12-medium">
-									<img width="100%" src="images/vudce.jpg">
+									<img width="100%" src="images/vudce.JPG">
 								</div>
 							</div>
 						</div>
