--- a/about.html
+++ b/about.html
@@ -27,6 +27,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
+											<li><a href="outings.html">Přehled Výstupů</a></li>
+											<li><a href="jura.html">K přečtení</a></li>
+											<li><a href="about.html">Pár slov o mě</a></li>
+											<li><a href="kontakt.html">Kontakt</a></li>
 										</ul>
 									</div>
 								</li>
@@ -49,7 +53,7 @@
 									za fyziku, což se mi zatím bohužel nedaří. Do práce běhám, nebo jezdím na kole z úpatí hor, kde bydlím se svojí
 									rodinkou, dvěma slepicemi, kočkou a dalšími zvířaty, které nikomu nepatří a volně pobíhají okolo.
 									Jsem manželem nejkrásněší ženy na světe, otcem nejmilejší dívenky ve vesmíru. Můj původ a srdce leží v Jeseníkách,
-									moje budoucnost a sny v Nízkých Tatrách. 
+									moje budoucnost a sny v Nízkých Tatrách.
 									</p>
 								  </div>
 									<div class="col-6 col-12-medium">
