--- a/jura.html
+++ b/jura.html
@@ -26,7 +26,11 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>``
+											<li><a href="index.html">Home</a></li>
+											<li><a href="outings.html">Přehled Výstupů</a></li>
+											<li><a href="jura.html">K přečtení</a></li>
+											<li><a href="about.html">Pár slov o mě</a></li>
+											<li><a href="kontakt.html">Kontakt</a></li>
 										</ul>
 									</div>
 								</li>
