--- a/outings.html
+++ b/outings.html
@@ -27,6 +27,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
+											<li><a href="outings.html">Přehled Výstupů</a></li>
+											<li><a href="jura.html">K přečtení</a></li>
+											<li><a href="about.html">Pár slov o mě</a></li>
+											<li><a href="kontakt.html">Kontakt</a></li>
 										</ul>
 									</div>
 								</li>
@@ -70,7 +74,7 @@
 								    </ul>
 								  </div>
 									<div class="col-4 col-12-medium">
-										<img width="110%" src="images/aravicimes-me">
+										<img width="110%" src="images/aravicimes-me.jpg">
 									</div>
                 </div>
 							</div>
