--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>JAVOR</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -59,7 +59,7 @@
 							<header class="major">
 								<h2>Jedndouché či těžší<br />
 								horské tůry za poznáním i zážitkem.</h2>
-								<p>Nabízím provádění v horském terénu v oblastech Mt. BLancu, Valais, Jury a Nízkých Tater<br />
+								<p>Nabízím provádění v horském terénu v oblastech Mt. blockquoteancu, Valais, Jury a Nízkých Tater<br />
 								</p>
 							</header>
 							<div class="row">
