--- a/jura.html
+++ b/jura.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML>
 <!--
+  Levačkou z Vápna
 	Spectral by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Levačkou z Vápna</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main_jura.css" />
@@ -151,6 +152,25 @@ S Francouzskou Jurou jsme si byli přisouzeni, možná i nedobrovolně, nikoliv 
 								<br />
 								<h2>THE END</h2>
 								<p>
+
+									<!-- Load Facebook SDK for JavaScript -->
+                  <div id="fb-root"></div>
+                  <script>(function(d, s, id) {
+	                var js, fjs = d.getElementsByTagName(s)[0];
+	                if (d.getElementById(id)) return;
+	                js = d.createElement(s); js.id = id;
+	                js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+	                fjs.parentNode.insertBefore(js, fjs);
+                  }(document, 'script', 'facebook-jssdk'));</script>
+
+                  <!-- Your share button code -->
+                  <div class="fb-share-button"
+	                data-href="https://tomasjavurek.github.io/website/jura.html"
+	                data-layout="button_count">
+                  </div>
+
+									<a onclick="Share.twitter('https://tomasjavurek.github.io/website/jura.html','Levačkou z Vápna')"> twitter sharing </a>
+
 								<br />
 							  <br /></p>
 							</header>
@@ -174,6 +194,7 @@ S Francouzskou Jurou jsme si byli přisouzeni, možná i nedobrovolně, nikoliv 
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="Share.js"></script>
 
 	</body>
 </html>
