--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<header class="major">
 								<h2>Jedndouché či těžší<br />
 								horské tůry za poznáním i zážitkem.</h2>
-								<p>Nabízím provádění v horském terénu v oblastech Mt. blockquoteancu, Valais, Jury a Nízkých Tater<br />
+								<p>Nabízím provádění v horském terénu v oblastech Mt. Blancu, Valais, Jury a Nízkých Tater<br />
 								</p>
 							</header>
 							<div class="row">
