--- a/outings.html
+++ b/outings.html
@@ -29,7 +29,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="outings.html">Přehled Výstupů</a></li>
 											<li><a href="jura.html">K přečtení</a></li>
-											<li><a href="about.html">Pár slov o mě</a></li>
+											<li><a href="about.html">Pár slov o mně</a></li>
 											<li><a href="kontakt.html">Kontakt</a></li>
 										</ul>
 									</div>
