--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
 											<li><a href="jura.html">K přečtení</a></li>
 											<li><a href="about.html">Pár slov o mně</a></li>
 											<li><a href="kontakt.html">Kontakt</a></li>
+											<li><a href="https://jaworblog.blogspot.com/p/home-page.html">Blog</a></li>
 										</ul>
 									</div>
 								</li>
