--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@
 	 							 <tr>
 	 								 <td>Provádění</td>
 	 								 <td>půldenní jednoduchá tůra</td>
-	 								 <td>60 eur</td>
-	 							 </tr>
-	 							 <tr>
-	 								 <td>Provádění</td>
-	 								 <td>celodenní jednoduchá tůra</td>
 	 								 <td>100 eur</td>
 	 							 </tr>
 	 							 <tr>
 	 								 <td>Provádění</td>
+	 								 <td>celodenní jednoduchá tůra</td>
+	 								 <td>200 eur</td>
+	 							 </tr>
+	 							 <tr>
+	 								 <td>Provádění</td>
 	 								 <td>celodenní technická tůra</td>
-	 								 <td>150 eur</td>
+	 								 <td>250 eur</td>
 	 							 </tr>
 	 							 <tr>
 	 								 <td>Půjčení</td>
@@ -179,6 +179,8 @@
 							</header>
 							<section>
 								<h4>Napište</h4>
+								<form action="http://formspree.io/tjavurek.iml@gemail.com" method="post"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
+                <!--
 								<form action="mailto:tomas.javurek09@gmail.com" method="post">
 									<div class="row gtr-uniform">
 										<div class="col-6 col-12-xsmall">
@@ -198,7 +200,8 @@
 										</div>
 									</div>
 								</form>
-
+                -->
+								
 								<!-- Add icon library -->
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
