--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 							</header>
 							<section>
 								<h4>Napište</h4>
-								<form action="http://formspree.io/tjavurek.iml@gemail.com" method="post"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
+								<form action="http://formspree.io/tjavurek.iml@gemail.com"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
                 <!--
 								<form action="mailto:tomas.javurek09@gmail.com" method="post">
 									<div class="row gtr-uniform">
@@ -201,7 +201,7 @@
 									</div>
 								</form>
                 -->
-								
+
 								<!-- Add icon library -->
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
