--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 							</header>
 							<section>
 								<h4>Napište</h4>
-								<form action="http://formspree.io/tjavurek.iml@gmail.com" method="POST"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
+								<form action="https://formspree.io/tjavurek.iml@gmail.com" method="POST"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
                 <!--
 								<form action="mailto:tomas.javurek09@gmail.com" method="post">
 									<div class="row gtr-uniform">
